Italicize product name

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 	</tr></tbody></table>
 	<table class="row"><tbody><tr>
 		<th class="no-bottom-padding small-12 large-9 columns first" pardot-region="prod-description"><table><tr><th>
-			<p>Step Up to Writing<sup>&reg;</sup> is unparalleled K–12 writing instruction that helps students meet rigorous standards and
+			<p><em>Step Up to Writing</em><sup>&reg;</sup> is unparalleled K–12 writing instruction that helps students meet rigorous standards and
 				become proficient writers.</p>
 		</th></tr></table></th>
 		<th class="no-bottom-padding small-12 large-3 columns last" pardot-region="prod-logo"><table><tr><th>
