Add unique GA tracking campaigns for each button

--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
     <meta name="format-detection" content="email=no">
     <title>Strategies to Enhance Your Writing Instruction</title>
     <style>
+        a[x-apple-data-detectors] {
+            color: inherit !important;
+            text-decoration: none !important;
+            font-size: inherit !important;
+            font-family: inherit !important;
+            font-weight: inherit !important;
+            line-height: inherit !important;
+        }
+
         @media only screen {
             html {
                 min-height: 100%;
@@ -194,7 +203,7 @@
                                                                                 <table style="border-collapse:collapse;border-spacing:0;padding:0;text-align:left;vertical-align:top;width:100%">
                                                                                     <tr style="padding:0;text-align:left;vertical-align:top">
                                                                                         <td style="-moz-hyphens:none;-ms-hyphens:none;-webkit-hyphens:none;Margin:0;background:#76bd22;border:none;border-collapse:collapse!important;border-radius:3px;color:#fefefe;font-family:Helvetica,Arial,sans-serif;font-size:16px;font-weight:400;hyphens:none;line-height:1.4;margin:0;padding:2px 5px 2px 5px;text-align:center!important;vertical-align:top;word-wrap:break-word"><a
-                                                                                                href="http://www.voyagersopris.com/?utm_source=news&amp;utm_medium=email&amp;utm_campaign=2018_Q3_W_Wonders"
+                                                                                                href="https://www.voyagersopris.com/conferences/wonders?utm_source=news&amp;utm_medium=email&amp;utm_campaign=2018_Q3_W_Wonders_Btn_Wonders_Integration_Guide"
                                                                                                 style="Margin:0;border:0 solid #76bd22;border-radius:3px;color:#fefefe;display:inline-block;font-family:Helvetica,Arial,sans-serif;font-size:14px;font-weight:400;letter-spacing:1px;line-height:1.4;margin:0;padding:2px 5px 2px 5px;text-align:center;text-decoration:none">Wonders
                                                                                                 Integration Guide
                                                                                                 &raquo;</a></td>
@@ -215,7 +224,7 @@
                                                                                 <table style="border-collapse:collapse;border-spacing:0;padding:0;text-align:left;vertical-align:top;width:100%">
                                                                                     <tr style="padding:0;text-align:left;vertical-align:top">
                                                                                         <td style="-moz-hyphens:none;-ms-hyphens:none;-webkit-hyphens:none;Margin:0;background:#76bd22;border:none;border-collapse:collapse!important;border-radius:3px;color:#fefefe;font-family:Helvetica,Arial,sans-serif;font-size:16px;font-weight:400;hyphens:none;line-height:1.4;margin:0;padding:2px 5px 2px 5px;text-align:center!important;vertical-align:top;word-wrap:break-word"><a
-                                                                                                href="http://www.voyagersopris.com/?utm_source=news&amp;utm_medium=email&amp;utm_campaign=2018_Q3_W_Wonders"
+                                                                                                href="https://www.voyagersopris.com/conferences/wonders?utm_source=news&amp;utm_medium=email&amp;utm_campaign=2018_Q3_W_Wonders_Btn_Benchmark_Integration_Guide"
                                                                                                 style="Margin:0;border:0 solid #76bd22;border-radius:3px;color:#fefefe;display:inline-block;font-family:Helvetica,Arial,sans-serif;font-size:14px;font-weight:400;letter-spacing:1px;line-height:1.4;margin:0;padding:2px 5px 2px 5px;text-align:center;text-decoration:none">Benchmark
                                                                                                 Integration Guide
                                                                                                 &raquo;</a></td>
@@ -236,7 +245,7 @@
                                                                                 <table style="border-collapse:collapse;border-spacing:0;padding:0;text-align:left;vertical-align:top;width:100%">
                                                                                     <tr style="padding:0;text-align:left;vertical-align:top">
                                                                                         <td style="-moz-hyphens:none;-ms-hyphens:none;-webkit-hyphens:none;Margin:0;background:#76bd22;border:none;border-collapse:collapse!important;border-radius:3px;color:#fefefe;font-family:Helvetica,Arial,sans-serif;font-size:16px;font-weight:400;hyphens:none;line-height:1.4;margin:0;padding:2px 5px 2px 5px;text-align:center!important;vertical-align:top;word-wrap:break-word"><a
-                                                                                                href="http://www.voyagersopris.com/?utm_source=news&amp;utm_medium=email&amp;utm_campaign=2018_Q3_W_Wonders"
+                                                                                                href="https://www.voyagersopris.com/conferences/wonders?utm_source=news&amp;utm_medium=email&amp;utm_campaign=2018_Q3_W_Wonders_Btn_Step_Up_to_Writing_Sample"
                                                                                                 style="Margin:0;border:0 solid #76bd22;border-radius:3px;color:#fefefe;display:inline-block;font-family:Helvetica,Arial,sans-serif;font-size:14px;font-weight:400;letter-spacing:1px;line-height:1.4;margin:0;padding:2px 5px 2px 5px;text-align:center;text-decoration:none"><em>Step
                                                                                                     Up to Writing</em>
                                                                                                 Sample &raquo;</a></td>
@@ -275,10 +284,12 @@
                                                     pardot-region="prod-logo" style="Margin:0 auto;color:#0a0a0a;font-family:Helvetica,Arial,sans-serif;font-size:16px;font-weight:400;line-height:1.4;margin:0 auto;padding:0;padding-bottom:0!important;padding-left:8px;padding-right:16px;text-align:left;width:134px">
                                                     <table style="border-collapse:collapse;border-spacing:0;padding:0;text-align:left;vertical-align:top;width:100%">
                                                         <tr style="padding:0;text-align:left;vertical-align:top">
-                                                            <th style="Margin:0;color:#0a0a0a;font-family:Helvetica,Arial,sans-serif;font-size:16px;font-weight:400;line-height:1.4;margin:0;padding:0;text-align:left"><img
-                                                                    src="http://go.voyagersopris.com/l/207592/2018-10-30/7z2fq/207592/76439/SUTW_130.png"
-                                                                    alt="Step Up to Writing logo" width="130" class="small-float-center"
-                                                                    style="-ms-interpolation-mode:bicubic;clear:both;display:block;max-width:100%;outline:0;text-decoration:none;width:auto"></th>
+                                                            <th style="Margin:0;color:#0a0a0a;font-family:Helvetica,Arial,sans-serif;font-size:16px;font-weight:400;line-height:1.4;margin:0;padding:0;text-align:left"><a
+                                                                    href="https://www.voyagersopris.com/literacy/step-up-to-writing/overview?utm_source=news&amp;utm_medium=email&amp;utm_campaign=2018_Q3_W_Wonders"
+                                                                    style="Margin:0;color:#005587;font-family:Helvetica,Arial,sans-serif;font-weight:400;line-height:1.4;margin:0;padding:0;text-align:left;text-decoration:underline"><img
+                                                                        src="http://go.voyagersopris.com/l/207592/2018-10-30/7z2fq/207592/76439/SUTW_130.png"
+                                                                        alt="Step Up to Writing logo" width="130" class="small-float-center"
+                                                                        style="-ms-interpolation-mode:bicubic;border:none;clear:both;display:block;max-width:100%;outline:0;text-decoration:none;width:auto"></a></th>
                                                         </tr>
                                                     </table>
                                                 </th>
